fix bug on mobile view

--- a/src/components/contact-form/styles.module.css
+++ b/src/components/contact-form/styles.module.css
@@ -80,7 +80,7 @@
 @media screen and (max-width: 500px) {
   .contact_container {
     position: absolute;
-    height: 100%;
+    height: 100vh;
     width: 100%;
     top: 0;
     left: 0;
